Day-7/2.with SSL/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-ingress
  namespace: dev
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: app=techworldwithmurali,Team=DevOps
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:338240650890:certificate/1ba71dbc-ed97-46b1-a2b3-16c38616b48c
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: nginx-app.techworldwithmurali.in
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: nginx-app
                port:
                  number: 80
